[package]
name = "mycelia"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "local-testing-server" ]

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
tracing-appender = "0.2.3"
scraper = "0.24.0"
regex = "1.12.2"
bloomfilter = "3.0.1"
